deployment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: one-app-service
spec:
  selector:
    app: one-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
