deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one-app-ingress
  namespace: oneapp-nonprod-ns
spec:
  ingressClassName: nginx-private
  rules:
  - host: oneapp-nonprod.com
    http:
      paths:
      - backend:
          service:
            name: one-app-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
